<resources>
    <string name="app_name">SpaceInvaders</string>
    <string name="enter_age">Introduzca su edad</string>
    <string name="enter_name">Introduzca su nombre</string>
    <string name="confirm">Confirmo</string>
    <string name="back">Volver</string>
    <string name="victory">Victoria</string>
    <string name="fail">Game Over</string>
    <string name="score">Puntos</string>
    <string name="name">Name</string>
    <string name="see_ranking">Ver el ranking</string>
</resources>
