<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/titulo">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="166dp"
        android:layout_height="59dp"
        android:layout_below="@+id/age"
        android:layout_centerHorizontal="true"
        android:text="Rebote"
        android:textOff="OFF"
        android:textOn="ON"
        tools:checked="true" />

    <EditText
            android:id="@+id/name"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:hint="@string/enter_name"
            android:inputType="text" />

    <EditText
        android:id="@+id/age"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:hint="@string/enter_age"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:text="@string/confirm" />


</RelativeLayout>